--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ celerybeat-schedule
 .env
 
 # virtualenv
-.venv
+.venv*
 venv/
 ENV/
 
@@ -118,3 +118,5 @@ MANIFEST.in
 tox.ini
 requirements_dev.txt
 .github/
+setup.*
+___*
