refactor, add sns and kinesis

--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,6 @@ ENV/
 .vscode/
 .idea/
 
-# Project Files
-
 ## Python Packaging assets
 docs/
 tests/
@@ -121,4 +119,7 @@ tox.ini
 requirements_dev.txt
 .github/
 setup.*
+
+# Project Files
 ___*
+data/
