--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,19 +19,11 @@ requires-python = ">=3.10"
 keywords = ["aws", "json", "dataset", "s3", "kinesis", "firehose", "sqs", "data", "streaming", "data engineering"]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "Intended Audience :: Data Engineers",
-    "Intended Audience :: Information Technology",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-    "Topic :: Database",
-    "Topic :: Cloud",
     "Topic :: Software Development :: Libraries :: Python Modules",
-    "Topic :: Utilities :: Data Processing",
-    "Topic :: Scientific/Engineering"
+    "Topic :: Utilities",
 ]
 dependencies = [
     "boto3>=1.20"
